Added title icon

--- a/dphGui/src/resources.qrc
+++ b/dphGui/src/resources.qrc
@@ -2,7 +2,8 @@
     <qresource prefix="/">
         <file>resources/start.png</file>
         <file>resources/stop.png</file>
-        <file>resources/settings.png</file>		
+        <file>resources/settings.png</file>
         <file>resources/exit.png</file>
+        <file>resources/philosophy.png</file>
     </qresource>
 </RCC>
