Added About and About Qt actions to Help menu

--- a/dphGui/src/resources.qrc
+++ b/dphGui/src/resources.qrc
@@ -8,5 +8,6 @@
         <file>resources/palette.png</file>
         <file>resources/spaghetti.png</file>
         <file>resources/settings.png</file>
+        <file>resources/qt_logo.png</file>
     </qresource>
 </RCC>
