--- a/dphGui/src/resources.qrc
+++ b/dphGui/src/resources.qrc
@@ -9,5 +9,7 @@
         <file>resources/spaghetti.png</file>
         <file>resources/settings.png</file>
         <file>resources/qt_logo.png</file>
+        <file>resources/usa.png</file>
+        <file>resources/rus.png</file>
     </qresource>
 </RCC>
